# VeriCaseJet

./: -n vericase -l app=vericase-api  .gitignore  .kilocodemodes  ADMIN_JWT_FIX_GUIDE.md  AI_CONFIGURATION_GUIDE.md  AWS.env  AWS_RESOURCE_AUDIT.md  AWS_SETUP_VALIDATION_REPORT.md  BEFORE_GITHUB_PUSH.md  CHANGES_SUMMARY.md  CHANGE_RDS_PASSWORD.md  CODE_AUDIT_COMPREHENSIVE.md  CREATE_KEY_STEPS.md  DATABASE_RESET_COMPLETED.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_IN_PROGRESS.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  FINAL_FIX.md  FIXES_APPLIED.md  FIX_ALL_ISSUES.md  FIX_CREDENTIALS.md  FORENSIC_ROOT_CAUSE_ANALYSIS.md  Gemini_Generated_Image_iaegbtiaegbtiaeg.ai  IMMEDIATE_ACTION_PLAN.md  MCP_DISAPPEARING_FIX.md  MCP_QUICKSTART.md  MINIMAL_SETUP_GUIDE.md  NEXT_STEPS.md  NEXT_STEPS_NOW.md  NUCLEAR_MCP_FIX.ps1  PRODUCTION_SETUP.md  PST_UPLOAD_FIXES_COMPLETE.md  PUSH_TO_GITHUB.md  QUICK_FIX_STEPS.md  README.md  REDEPLOY_NOW.md  (+67 more)
mcp-server/: .env.example  README.md  mcp.json  pyproject.toml
mcp-server/src/: __init__.py  server.py
pst-analysis-engine/: .cursorignore  .env  .env.aws  .env.aws-deployed  .env.bedrock-simple  .env.example  .env.fixed  .env.production.template  .env.template  .eslintrc.json  .gitignore  .lintignore  .pre-commit-config.yaml  ACTUAL_STATUS.md  AI_MODELS_2025_UPDATE.md  AI_REFINEMENT_GUIDE.md  AWS_CONFIG_CHECKLIST.md  AWS_DEPLOYMENT_COMPLETE.md  AWS_DEPLOYMENT_SUMMARY.md  AWS_QUICK_START.md  AWS_SERVICES_INTEGRATION_GUIDE.md  AWS_SETUP_SECURE.md  BEDROCK_INTEGRATION_SUMMARY.md  BEDROCK_OPTIMAL_SETUP.md  BEDROCK_QUICK_START.md  BEDROCK_SETUP.md  BEDROCK_VERICASE_SETUP.md  CONFIG_WIZARD_SPEC.md  DATABASE_RESET_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_AWS.md  DEPLOY_TO_EC2.md  Dockerfile  EC2_STATUS.md  FINAL_SETUP_STEPS.md  FIX_PST_UPLOAD.md  LOCAL_DEVELOPMENT.md  MVP_FEATURES.md  NEW_FEATURES_SUMMARY.md  (+116 more)
pst-analysis-engine/_logs/: PST_UUID_FIX_APPLIED.md  SECURITY_FIXES_SUMMARY.md  SESSION_SUMMARY.md
pst-analysis-engine/api/: Dockerfile  README.md  app_runner_start.py  apply_migrations.py  create_admin.py  init_admin.py  init_settings.py  requirements.txt  run_apprunner.sh  start-test.sh  start.sh
pst-analysis-engine/assets/: chronology-lens-option2.html
pst-analysis-engine/deploy/: aws-deploy.sh  ec2-userdata.sh
pst-analysis-engine/docs/: AWS_SERVICES_CONFIGURATION.md  CELERY_WORKER_GUIDE.md  TIKA_INTEGRATION_GUIDE.md  architecture.md  usage.md
pst-analysis-engine/iam-policies/: apprunner-opensearch-policy.json  apprunner-s3-policy.json  apprunner-secrets-policy.json  opensearch-domain-policy.json  vericase-ai-services-policy.json
pst-analysis-engine/infrastructure/: bedrock-knowledge-base.yaml
pst-analysis-engine/migrations/: add_programme_indexes.sql
pst-analysis-engine/pst-analysis-engine/: cspell.json
pst-analysis-engine/scripts/: analyze.sh  dev.ps1  run_local.py
pst-analysis-engine/templates/: index.html
pst-analysis-engine/tests/: test_models_migration.py
pst-analysis-engine/tools/: check_intelligent_config.py
pst-analysis-engine/ui/: admin-approvals.html  admin-settings.html  admin-users.html  ag-theme-vericase.css  ai-refinement-wizard.html  app-state.js  brand-styles.css  chronology.html  config.js  contentious-matters.html  copilot.html  correspondence-enterprise.html  dashboard.html  debug-upload.html  deep-analysis.html  deep-research.html  delays.html  design-system.css  evidence.html  intelligent-wizard.html  login.html  master-dashboard.html  nav-shell.js  password-reset.html  pdf-viewer.html  profile.html  programme.html  project-timeline.html  pst-upload.html  refinement-wizard.html  register.html  security.js  stakeholders.html  temp_check.js  vericase-analysis.html  vericase-ui.js  wizard-logic.js  wizard.html
pst-analysis-engine/worker/: .dockerignore  Dockerfile  requirements.txt
services/pst-extractor/: Cargo.toml  (+2 more)
vericase/: .dockerignore  .env.ai-fullpower.example  .env.aws.example  .env.example  .env.local.example  .env.production.example  .gitignore  AI_KEY_MANAGEMENT.md  CODE_AUDIT.md  EKS_DEPLOYMENT_GUIDE.md  ENV_FILE_GUIDE.md  FEATURE_ENABLEMENT_CHECKLIST.md  FILE_DEPLOYMENT_MAP.md  QUICK_DEPLOY_GUIDE.md  README.md  complete-rebuild-deploy.ps1  docker-compose.prod.yml  docker-compose.yml  fix-admin-k8s.sh  fix-admin-local.ps1  fix-docker-alignment.ps1  pyproject.toml  reload-api.ps1  requirements.txt  setup.cfg  start-local.ps1
(+792 files in other folders)
