[tool]
name = "pst-analysis-engine"
version = "0.1.0"
description = "A powerful PST analysis software for extracting and processing email data."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
# Add your project dependencies here
# Example:
# requests = "^2.25.1"

[dev-dependencies]
# Add your development dependencies here
# Example:
# pytest = "^6.2.1"

[tool.basedpyright]
include = ["pst-analysis-engine/src", "api/app", "worker"]
exclude = [
  ".venv",
  "venv",
  "env",
  "__pycache__",
  "**/__pycache__",
  "*.egg-info",
  "build",
  "dist"
]
ignore = [".venv/**", "venv/**", "env/**"]
typeCheckingMode = "basic"
reportMissingImports = "warning"

[tool.ruff]
exclude = [
  ".venv",
  "venv",
  "env",
  "__pycache__",
  "*.egg-info",
  "build",
  "dist"
]

[tool.pylint]
ignore = [".venv", "venv", "env", "__pycache__"]
