[tool]
name = "vericase"
version = "1.0.0"
description = "Forensic-grade PST email analysis and legal dispute intelligence."
authors = ["VeriCase Team"]
license = "Proprietary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
# Add your project dependencies here
# Example:
# requests = "^2.25.1"

[dev-dependencies]
# Add your development dependencies here
# Example:
# pytest = "^6.2.1"

[tool.basedpyright]
include = ["api/app", "worker_app"]
exclude = [
  ".venv",
  "venv",
  "env",
  "__pycache__",
  "**/__pycache__",
  "*.egg-info",
  "build",
  "dist"
]
ignore = [".venv/**", "venv/**", "env/**"]
typeCheckingMode = "basic"
reportMissingImports = "warning"

[tool.ruff]
exclude = [
  ".venv",
  "venv",
  "env",
  "__pycache__",
  "*.egg-info",
  "build",
  "dist"
]
[tool.ruff.lint]
ignore = ["E712", "E402"]

[tool.ruff.lint.per-file-ignores]
"tests/test_models_migration.py" = ["F401", "E722"]
"api/app/evidence_metadata.py" = ["E722"]
"api/app/evidence_repository.py" = ["E722"]

[tool.pylint]
ignore = [".venv", "venv", "env", "__pycache__"]

[tool.black]
line-length = 88
skip-string-normalization = false
skip-magic-trailing-comma = false
# Keep includes simple; Black will follow pyproject discovery.
# include = '\\.pyi?$'
# exclude = [
#   ".venv",
#   "venv",
#   "env",
#   "__pycache__",
#   "*.egg-info",
#   "build",
#   "dist"
# ]
