[metadata]
name = pst-analysis-engine
version = 0.1.0
description = A software package for processing PST files and analyzing email data.
author = Your Name
author_email = your.email@example.com
url = https://yourprojecturl.com
license = MIT

[options]
packages = find:
install_requires =
    # List your dependencies here
    pandas
    numpy
    # Add other required packages

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pst-analysis = __main__:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = *Tests
python_functions = test_*