[package]
name = "pst-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
aws-config = "1"
aws-sdk-s3 = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1"
futures = "0.3"  # For parallel async uploads
mailparse = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"

